Improve semantic for all .tag links by applying list structure

--- a/index.html
+++ b/index.html
@@ -109,9 +109,15 @@
                     <article class="section__item link-container">
                         <div class="link-container__interior link-container__block-1">
                             <div class="link-container__text-container ">
-                                <a class="link tag link-container__tag" href="#">LIFESTYLE</a>
-                                <a class="link tag link-container__tag" href="#">INTERIOR</a>
-                                <a class="link" href="#">
+                                <ul class="tags-list">
+                                    <li class="tags-list__item">
+                                        <a class="link tag link-container__tag" href="#">LIFESTYLE</a>
+                                    </li>
+                                    <li class="tags-list__item">
+                                        <a class="link tag link-container__tag" href="#">INTERIOR</a>
+                                    </li>
+                                </ul>
+                                <a href="#">
                                     <h3 class="heading link-container__name">Сейчас в тренде: сад на подоконнике</h3>
                                 </a>
                             </div>
@@ -120,7 +126,11 @@
                     <article class="section__item link-container">
                         <div class="link-container__interior link-container__block-2">
                             <div class="link-container__text-container">
-                                <a class="tag link-container__tag" href="#">FOOD</a>
+                                <ul class="links-list">
+                                    <li class="tags-list__item">
+                                        <a class="link tag link-container__tag" href="#">FOOD</a>
+                                    </li>
+                                </ul>
                                 <a class="link" href="#">
                                     <h3 class="heading link-container__name">Сыры на красивых картинках из интернета: какие они на вкус?</h3>
                                 </a>
@@ -130,8 +140,14 @@
                     <article class="section__item link-container">
                         <div class="link-container__interior link-container__block-3">
                             <div class="link-container__text-container">
-                                <a class="tag link-container__tag" href="#">Lifestyle</a>
-                                <a class="tag link-container__tag" href="#">Travel</a>
+                                <ul class="tags-list">
+                                    <li class="tags-list__item">
+                                        <a class="link tag link-container__tag" href="#">Lifestyle</a>
+                                    </li>
+                                    <li class="tags-list__item">
+                                        <a class="link tag link-container__tag" href="#">Travel</a>
+                                    </li>
+                                </ul>
                                 <a class="link" href="#">
                                     <h3 class="heading link-container__name">Собираемся в первый поход в горы</h3>
                                 </a>
@@ -141,8 +157,14 @@
                     <article class="section__item link-container">
                         <div class="link-container__interior link-container__block-4">
                             <div class="link-container__text-container">
-                                <a class="tag link-container__tag" href="#">Food</a>
-                                <a class="tag link-container__tag" href="#">Health</a>
+                                <ul class="tags-list">
+                                    <li class="tags-list__item">
+                                        <a class="tag link-container__tag" href="#">Food</a>
+                                    </li>
+                                    <li class="tags-list__item">
+                                        <a class="tag link-container__tag" href="#">Health</a>
+                                    </li>
+                                </ul>
                                 <a class="link" href="#">
                                     <h3 class="heading link-container__name">Сейчас в тренде: сколько витамина c в лимонах?</h3>
                                 </a>
@@ -168,8 +190,14 @@
                                 <div class="text-block">
                                     <header class="snippet__header">
                                         <div class="snippet__tags">
-                                            <a class="link tag snippet__tag" href="#">Travel</a>
-                                            <a class="link tag snippet__tag" href="#">Health</a>
+                                            <ul class="tags-list">
+                                                <li class="tags-list__item">
+                                                    <a class="link tag snippet__tag" href="#">Travel</a>
+                                                </li>
+                                                <li class="tags-list__item">
+                                                    <a class="link tag snippet__tag" href="#">Health</a>
+                                                </li>
+                                            </ul>
                                         </div>
                                         <a class="link snippet__link" href="#">
                                             <h3 class="heading snippet__heading">10 Мест, ради которых стоит проснуться на рассвете</h3>
@@ -197,8 +225,14 @@
                                 <div class="text-block">
                                     <header class="snippet__header">
                                         <div class="snippet__tags">
-                                            <a class="link tag snippet__tag" href="#">Health</a>
-                                            <a class="link tag snippet__tag" href="#">Lifestyle</a>
+                                            <ul class="tags-list">
+                                                <li class="tags-list__item">
+                                                    <a class="link tag snippet__tag" href="#">Health</a>
+                                                </li>
+                                                <li class="tags-list__item">
+                                                    <a class="link tag snippet__tag" href="#">Lifestyle</a>
+                                                </li>
+                                            </ul>
                                         </div>
                                         <a class="link snippet__link" href="#">
                                             <h3 class="heading snippet__heading">Йога для начинающих в домашних условиях</h3>
@@ -228,7 +262,11 @@
                                 <div class="text-block">
                                     <header class="snippet__header">
                                         <div class="snippet__tags">
-                                            <a class="link tag snippet__tag" href="#">Music</a>
+                                            <ul class="tags-list">
+                                                <li class="tags-list__item">
+                                                    <a class="link tag snippet__tag" href="#">Music</a>
+                                                </li>
+                                            </ul>
                                         </div>
                                         <a class="link snippet__link" href="#">
                                             <h3 class="heading snippet__heading">Лучшие музыкальные фестивали этого лета</h3>
@@ -258,8 +296,14 @@
                                 <div class="text-block">
                                     <header class="snippet__header">
                                         <div class="snippet__tags">
-                                            <a class="link tag snippet__tag" href="#">Lyfestyle</a>
-                                            <a class="link tag snippet__tag" href="#">Food</a>
+                                            <ul class="tags-list">
+                                                <li class="tags-list__item">
+                                                    <a class="link tag snippet__tag" href="#">Lyfestyle</a>
+                                                </li>
+                                                <li class="tags-list__item">
+                                                    <a class="link tag snippet__tag" href="#">Food</a>
+                                                </li>
+                                            </ul>
                                         </div>
                                         <a class="link snippet__link" href="#">
                                             <h3 class="heading snippet__heading">Наукоёмкий подход к кулинарии</h3>
@@ -289,9 +333,17 @@
                                 <div class="text-block">
                                     <header class="snippet__header">
                                         <div class="snippet__tags">
-                                            <a class="tag snippet__tag" href="#">Lifestyle</a>
-                                            <a class="tag snippet__tag" href="#">Interior</a>
-                                            <a class="tag snippet__tag" href="#">Art</a>
+                                            <ul class="tags-list">
+                                                <li class="tags-list__item">
+                                                    <a class="tag snippet__tag" href="#">Lifestyle</a>
+                                                </li>
+                                                <li class="tags-list__item">
+                                                    <a class="tag snippet__tag" href="#">Interior</a>
+                                                </li>
+                                                <li class="tags-list__item">
+                                                    <a class="tag snippet__tag" href="#">Art</a>
+                                                </li>
+                                            </ul>
                                         </div>
                                         <a class="link snippet__link" href="#">
                                             <h3 class="heading snippet__heading">Делаем модные принты на подушках для интерьера</h3>
@@ -391,32 +443,48 @@
                         <header class="header aside__header tags__header">
                             <h2 class="heading section-heading aside__text">Теги</h2>
                         </header>
-                        <div class="tag-container">
-                            <a class="tag-container__item" href="#">
-                                <span class="tag tag-container__tag">Fashion</span>
-                            </a>
-                            <a class="tag-container__item" href="#">
-                                <span class="tag tag-container__tag">Music</span>
-                            </a>
-                            <a class="tag-container__item" href="#">
-                                <span class="link tag tag-container__tag">Lifestyle</span>
-                            </a>
-                            <a class="tag-container__item" href="#">
-                                <span class="link tag tag-container__tag">Art</span>
-                            </a>
-                            <a class="tag-container__item" href="#">
-                                <span class="link tag tag-container__tag">Interior</span>
-                            </a>
-                            <a class="tag-container__item" href="#">
-                                <span class="link tag tag-container__tag">Travel</span>
-                            </a>
-                            <a class="tag-container__item" href="#">
-                                <span class="link tag tag-container__tag">Food</span>
-                            </a>
-                            <a class="tag-container__item" href="#">
-                                <span class="link tag tag-container__tag">Health</span>
-                            </a>
-                        </div>
+                        <ul class="tag-container">
+                            <li class="tags-list__item">
+                                <a class="tag-container__item" href="#">
+                                    <span class="tag tag-container__tag">Fashion</span>
+                                </a>
+                            </li>
+                            <li class="tags-list__item">
+                                <a class="tag-container__item" href="#">
+                                    <span class="tag tag-container__tag">Music</span>
+                                </a>
+                            </li>
+                            <li class="tags-list__item">
+                                <a class="tag-container__item" href="#">
+                                    <span class="link tag tag-container__tag">Lifestyle</span>
+                                </a>
+                            </li>
+                            <li class="tags-list__item">
+                                <a class="tag-container__item" href="#">
+                                    <span class="link tag tag-container__tag">Art</span>
+                                </a>
+                            </li>
+                            <li class="tags-list__item">
+                                <a class="tag-container__item" href="#">
+                                    <span class="link tag tag-container__tag">Interior</span>
+                                </a>
+                            </li>
+                            <li class="tags-list__item">
+                                <a class="tag-container__item" href="#">
+                                    <span class="link tag tag-container__tag">Travel</span>
+                                </a>
+                            </li>
+                            <li class="tags-list__item">
+                                <a class="tag-container__item" href="#">
+                                    <span class="link tag tag-container__tag">Food</span>
+                                </a>
+                            </li>
+                            <li class="tags-list__item">
+                                <a class="tag-container__item" href="#">
+                                    <span class="link tag tag-container__tag">Health</span>
+                                </a>
+                            </li>
+                        </ul>
                     </section>
 
                     <section class="topics">
