--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
                                     <header class="snippet__header">
                                         <div class="snippet__tags">
                                             <ul class="tags-list">
-                                                <li class="tags-list__item">
-                                                    <a class="link tag snippet__tag" href="#">Travel</a>
+                                                <li class="tags-list__item snippet__tag">
+                                                    <a class="link tag" href="#">Travel</a>
                                                 </li>
-                                                <li class="tags-list__item">
-                                                    <a class="link tag snippet__tag" href="#">Health</a>
+                                                <li class="tags-list__item snippet__tag">
+                                                    <a class="link tag" href="#">Health</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -444,45 +444,29 @@
                             <h2 class="heading section-heading aside__text">Теги</h2>
                         </header>
                         <ul class="tag-container">
-                            <li class="tags-list__item">
-                                <a class="tag-container__item" href="#">
-                                    <span class="tag tag-container__tag">Fashion</span>
-                                </a>
+                            <li class="tag-container__item">
+                                <a class="link tag tag-container__tag" href="#">Fashion</a>
                             </li>
-                            <li class="tags-list__item">
-                                <a class="tag-container__item" href="#">
-                                    <span class="tag tag-container__tag">Music</span>
-                                </a>
+                            <li class="tag-container__item">
+                                <a class="link tag tag-container__tag" href="#">Music</a>
                             </li>
-                            <li class="tags-list__item">
-                                <a class="tag-container__item" href="#">
-                                    <span class="link tag tag-container__tag">Lifestyle</span>
-                                </a>
+                            <li class="tag-container__item" >
+                                <a class="link tag tag-container__tag" href="#">Lifestyle</a>
                             </li>
-                            <li class="tags-list__item">
-                                <a class="tag-container__item" href="#">
-                                    <span class="link tag tag-container__tag">Art</span>
-                                </a>
+                            <li class="tag-container__item" >
+                                <a class="link tag tag-container__tag" href="#">Art</a>
                             </li>
-                            <li class="tags-list__item">
-                                <a class="tag-container__item" href="#">
-                                    <span class="link tag tag-container__tag">Interior</span>
-                                </a>
+                            <li class="tag-container__item" >
+                                <a class="link tag tag-container__tag" href="#">Interior</a>
                             </li>
-                            <li class="tags-list__item">
-                                <a class="tag-container__item" href="#">
-                                    <span class="link tag tag-container__tag">Travel</span>
-                                </a>
+                            <li class="tag-container__item" >
+                                <a class="link tag tag-container__tag" href="#">Travel</a>
                             </li>
-                            <li class="tags-list__item">
-                                <a class="tag-container__item" href="#">
-                                    <span class="link tag tag-container__tag">Food</span>
-                                </a>
+                            <li class="tag-container__item" >
+                                <a class="link tag tag-container__tag" href="#">Food</a>
                             </li>
-                            <li class="tags-list__item">
-                                <a class="tag-container__item" href="#">
-                                    <span class="link tag tag-container__tag">Health</span>
-                                </a>
+                            <li class="tag-container__item" >
+                                <a class="link tag tag-container__tag" href="#">Health</a>
                             </li>
                         </ul>
                     </section>
