Update social media logos according to template
Now we have three logo instead of five because I mixed up the templates.

--- a/index.html
+++ b/index.html
@@ -608,22 +608,12 @@
             <ul class="social-media">
                 <li class="social-media__item">
                     <a class="link" href="#">
-                        <img class="twitter" src="svg/004-twitter.svg" alt="Twitter" height="26">
+                        <img class="dribbble" src="svg/001-dribbble.svg" alt="Dribbble" height="20">
                     </a>
                 </li>
                 <li class="social-media__item">
                     <a class="link" href="#">
                         <img class="pinterest" src="svg/001-pinterest.svg" alt="Pinterest" height="20">
-                    </a>
-                </li>
-                <li class="social-media__item">
-                    <a class="link" href="#">
-                        <img class="facebook" src="svg/002-facebook-logo.svg" alt="Facebook" height="20">
-                    </a>
-                </li>
-                <li class="social-media__item">
-                    <a class="link" href="#">
-                        <img class="instagram" src="svg/005-instagram.svg" alt="Instagram" height="20">
                     </a>
                 </li>
                 <li class="social-media__item">
