Improve rubber layout for shop pictures in the mobile version
After this correction shop item's images will have a rubber properties in mobile version and  will behave, maintaining the proportions and the side margins during stretching like the text of the card.

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
                 <div class="content-container shop__content-container">
                     <article class="shop__item">
-                        <picture class="shop__image">
+                        <picture>
                             <source
                                     media="(min-width: 1200px)"
                                     srcset="images/shop-item-desk1.jpg" width="300" height="204">
@@ -558,7 +558,7 @@
                         </div>
                     </article>
                     <article class="shop__item">
-                        <picture class="shop__image">
+                        <picture>
                             <source
                                     media="(min-width: 1200px)"
                                     srcset="images/shop-item-desk2.jpg" width="300" height="204">
@@ -579,7 +579,7 @@
                         </div>
                     </article>
                     <article class="shop__item">
-                        <picture class="shop__image">
+                        <picture>
                             <source
                                     media="(min-width: 1200px)"
                                     srcset="images/shop-item-desk3.jpg" width="300" height="204">
