Align desktop version with template

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <label class="hamburger-menu__btn" for="hamburger-menu__toggle">
                         <span></span>
                     </label>
-                    <nav class="navigation-menu">
+                    <nav>
                         <ul class="nav-links">
                             <li class="link nav-links__item">
                                 <a class="link nav-links__link" href="#">Главная</a>
