Use main tag only for main article column.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         </header>
 
-        <main class="main">
+        <div class="main-section">
             <section class="section trends">
                 <header class="section__header main-section-header">
                     <h2 class="heading section-heading">Сейчас в тренде</h2>
@@ -175,7 +175,7 @@
             </section>
 
             <div class="content-column two-columns-section">
-                <div class="section-articles">
+                <main class="section-articles">
                     <ul class="articles">
                         <li class="articles__item">
                             <article class="snippet">
@@ -360,7 +360,7 @@
                             </article>
                         </li>
                     </ul>
-                </div>
+                </main>
 
                 <aside class="aside">
                     <section class="new-posts">
@@ -602,7 +602,7 @@
                     </article>
                 </div>
             </section>
-        </main>
+        </div>
 
         <footer class="content-column footer">
             <ul class="social-media">
